// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`city reducer should handle SELECT_CITY 1`] = `
Object {
  "name": undefined,
}
`;

exports[`city reducer should return the initial state 1`] = `
Object {
  "name": "London",
}
`;
